fix loading screen mobile bug where elements were visible on top of loading screen.

--- a/Games/Brick Breaker/Brick Breaker Page/brickBreakerPage.css
+++ b/Games/Brick Breaker/Brick Breaker Page/brickBreakerPage.css
@@ -182,7 +182,10 @@ li{
     body{
         overflow-x: hidden;
     }
-
+    
+    #gamecard-z{
+        display: none;
+    }
     .gameCard{
         display: none;
     }
@@ -193,6 +196,13 @@ li{
 }
 
 @media only screen and (max-width: 769px){
+    .gameCard{
+        display: none;
+    }
+    #gamecard-z{
+        display: none;
+    }
+
     body{
         flex-direction: column;
         overflow-y: auto;
